# BangCalendar

./: README.md  build.gradle  settings.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: Event.json  character.json  event.json
app/src/main/cpp/: base64.c  base64.cpp  eaes.cpp  security.cpp
app/src/main/cpp/include/: base64.h  eaes.h
app/src/main/cpp/openssl/: crypto.h
app/src/main/java/com/mty/bangcalendar/: BangCalendarApplication.kt  MainActivity.kt
app/src/main/java/com/mty/bangcalendar/di/: ActivityModule.kt
app/src/main/java/com/mty/bangcalendar/enum/: EventConstant.kt  IntentActions.kt
app/src/main/java/com/mty/bangcalendar/logic/: DatabaseUpdater.kt  Repository.kt
app/src/main/java/com/mty/bangcalendar/service/: AddCharacterService.kt  (+5 more)
app/src/main/res/drawable-v24/: round_edge.xml
app/src/main/res/layout/: activity_character_list.xml  activity_event_list.xml  activity_guide.xml  activity_main.xml  activity_search.xml  additional_tip.xml  birthday_card.xml  character_card.xml  daily_tag_item_bir.xml  daily_tag_item_event.xml  dailytag_card.xml  date_item.xml  date_picker.xml  event_card.xml  event_list_item.xml  login.xml  settings_activity.xml  week_bar.xml
app/src/main/res/menu/: toolbar.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: root_preferences.xml
(+87 files in other folders)
